# cso_energy

./: .gitignore  README.md  README.rst  pyproject.toml
cso_energy/census/small_area/: statistics.py
notebooks/: extract-table-from-census.ipynb  sandbox.ipynb
